tests/ui/const-generics/mgca/cast-with-type-mismatched.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/cast-with-type-mismatched.rs:6:30
   |
LL | fn foo<const N: u32>(a: [(); N as usize]) {}
   |                              ^^^^^^^^^^

error: the constant `C` is not of type `u32`
  --> $DIR/cast-with-type-mismatched.rs:12:11
   |
LL |     foo::<C>([]);
   |           ^ expected `u32`, found `f32`
   |
note: required by a const generic parameter in `foo`
  --> $DIR/cast-with-type-mismatched.rs:6:8
   |
LL | fn foo<const N: u32>(a: [(); N as usize]) {}
   |        ^^^^^^^^^^^^ required by this const generic parameter in `foo`

error: aborting due to 2 previous errors

